--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "env-cmd": "^10.1.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
