--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "app": "file:",
     "axios": "^1.6.2",
     "date-fns-tz": "^2.0.1",
     "dotenv": "^16.4.5",
