--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,24 @@
 server {
     listen 80;
+    server_name escalix.com.br www.escalix.com.br;
+    return 301 https://$host$request_uri;  # Redireciona HTTP para HTTPS
+}
+
+server {
+    listen 443 ssl;
+    server_name escalix.com.br www.escalix.com.br;
+
     location / {
         root /usr/share/nginx/html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+
+    location /api {
+        proxy_pass http://escalix-backend:3000;  # Redireciona para o container do backend
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }    
 }
