--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,34 @@
+# Redireciona todas as requisições HTTP para HTTPS
 server {
     listen 80;
     server_name escalix.com.br www.escalix.com.br;
     return 301 https://$host$request_uri;  # Redireciona HTTP para HTTPS
 }
 
+# Configuração para HTTPS com SSL/TLS
 server {
     listen 443 ssl;
     server_name escalix.com.br www.escalix.com.br;
 
+    # Certificados SSL/TLS da Cloudflare
+    ssl_certificate /etc/nginx/ssl/cert.pem;       # Certificado SSL gerado pela Cloudflare
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem; # Chave privada correspondente
+    ssl_protocols TLSv1.2 TLSv1.3;  # Define os protocolos seguros aceitos
+    ssl_prefer_server_ciphers on;    # Preferência de ciphers do servidor
+
+    # Configuração da aplicação frontend (React)
     location / {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html;  # Caminho onde o frontend está armazenado
         index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html;  # Reescreve URLs para permitir o uso do React Router
     }
 
+    # Configuração para o backend da aplicação
     location /api {
         proxy_pass http://escalix-backend:3000;  # Redireciona para o container do backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }    
+    }
 }
