configurando mais uma vez o nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,20 @@
-# Configuração para HTTP sem SSL
+# Redireciona todas as requisições HTTP para HTTPS
 server {
-    listen 80;  # Escuta na porta 80
+    listen 80;
     server_name escalix.com.br www.escalix.com.br;
+    return 301 https://$host$request_uri;  # Redireciona HTTP para HTTPS
+}
+
+# Configuração para HTTPS com SSL/TLS
+server {
+    listen 443 ssl;
+    server_name escalix.com.br www.escalix.com.br;
+
+    # Certificados SSL/TLS da Cloudflare
+    ssl_certificate /etc/nginx/ssl/cert.pem;       # Certificado SSL gerado pela Cloudflare
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem; # Chave privada correspondente
+    ssl_protocols TLSv1.2 TLSv1.3;  # Define os protocolos seguros aceitos
+    ssl_prefer_server_ciphers on;    # Preferência de ciphers do servidor
 
     # Configuração da aplicação frontend (React)
     location / {
