--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 # Redireciona todas as requisições HTTP para HTTPS
 server {
     listen 80;
-    server_name escalix.com.br www.escalix.com.br;
+    server_name escalix.com.br;
     return 301 https://$host$request_uri;  # Redireciona HTTP para HTTPS
 }
 
 # Configuração para HTTPS com SSL/TLS
 server {
-    listen 443 ssl;
-    server_name escalix.com.br www.escalix.com.br;
+    listen 3001 ssl;
+    server_name escalix.com.br;
 
     # Certificados SSL/TLS da Cloudflare
     ssl_certificate /etc/nginx/ssl/cert.pem;       # Certificado SSL gerado pela Cloudflare
