ajustando config nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,48 @@
-# Redireciona todas as requisições HTTP para HTTPS
+# Redireciona www.escalix.com.br para escalix.com.br (sempre para HTTPS)
+server {
+    listen 80;
+    server_name www.escalix.com.br;
+    return 301 https://escalix.com.br$request_uri;
+}
+
+# Redireciona HTTP para HTTPS no escalix.com.br
 server {
     listen 80;
     server_name escalix.com.br;
-    return 301 https://$host$request_uri;  # Redireciona HTTP para HTTPS
+    return 301 https://escalix.com.br$request_uri;
 }
 
-# Configuração para HTTPS com SSL/TLS
+# Redireciona HTTPS www.escalix.com.br para escalix.com.br
+server {
+    listen 3001 ssl;
+    server_name www.escalix.com.br;
+
+    # Certificados SSL
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    return 301 https://escalix.com.br$request_uri;
+}
+
+# Configuração principal para escalix.com.br
 server {
     listen 3001 ssl;
     server_name escalix.com.br;
 
-    # Certificados SSL/TLS da Cloudflare
-    ssl_certificate /etc/nginx/ssl/cert.pem;       # Certificado SSL gerado pela Cloudflare
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem; # Chave privada correspondente
-    ssl_protocols TLSv1.2 TLSv1.3;  # Define os protocolos seguros aceitos
-    ssl_prefer_server_ciphers on;    # Preferência de ciphers do servidor
+    # Certificados SSL
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    # Configuração da aplicação frontend (React)
+    # Configuração da aplicação
     location / {
-        root /usr/share/nginx/html;  # Caminho onde o frontend está armazenado
+        root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html;  # Reescreve URLs para permitir o uso do React Router
+        try_files $uri $uri/ /index.html;
     }
 
-    # Configuração para o backend da aplicação
+    # Proxy para API
     location /api {
-        proxy_pass http://escalix-backend:3000;  # Redireciona para o container do backend
+        proxy_pass http://escalix-backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
